# Dia-TTS-Server-Runpod

./: Caddyfile  Dockerfile  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: docker-build-push.yml
examples/: generate_audio.sh  inputs.jsonl
